[gd_scene load_steps=3 format=2]

[ext_resource path="res://Levels/Bomb.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 29.7145

[node name="Bomb" type="Area2D"]
script = ExtResource( 1 )

[node name="BoomCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.312538 )
shape = SubResource( 1 )
disabled = true

[node name="FallTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -9.2639
margin_top = -9.0
margin_right = 9.7361
margin_bottom = 9.0
color = Color( 0.211765, 0.137255, 0.737255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndOfDamageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="timeout" from="EndOfDamageTimer" to="." method="_on_EndOfDamageTimer_timeout"]
